Fixed datepicker not showing on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .datepicker-container{
     /* required for the Datepicker plugin to function correctly */
-    position: absolute;
+    position: fixed;
     min-width: 0px;
     min-height: 0px;
     display: flex;
